welcome.lessons.welcome.array.basics.Array1.scala.code
override def run() {

var tab = new Array[Color] (getHauteurMonde())

def remplirTableau() {
	for (i <- 0 to getHauteurMonde() - 1) {
		tab(i) = getCouleurSol()
		avance
	}
}
	
}
